Trying to fix blur on mobile

--- a/styles/header.css
+++ b/styles/header.css
@@ -29,6 +29,12 @@ header {
     pointer-events: auto;
 }
 #navbar-pagelinks {
+    -webkit-backface-visibility: hidden;
+    -moz-backface-visibility: hidden;
+    -webkit-transform: translate3d(0, 0, 0);
+    -moz-transform: translate3d(0, 0, 0);
+    
+    min-height: var(--general-font-size);
     pointer-events: auto;
     position: absolute;
     backdrop-filter: blur(10px);
