--- a/styles/main_styles/main-requestdemo.css
+++ b/styles/main_styles/main-requestdemo.css
@@ -2,6 +2,7 @@
     display: flex;
     flex-direction: column;
     width: 95%;
+    height: 60vh;
 }
 
 #main-requestdemo > h2 {
